Added preliminary hackery APIs for Reflection, Unsafe and Enums + Tests (#3)
* Added preliminary hackery APIs for Reflection, Unsafe and Enums + Tests

- Rerouted EnumHelper calls to EnumHackery
- Pending deprecation for EnumHelper
- Add opens for jdk.internal.reflect, to get access to ConstructorAccessor

* Fix incompatible types error

* Also redirecting calls in EnumHelperClient

---------

Co-authored-by: Korewa_Li <li.hvktqs@gmail.com>